Criação e Seraração de serviços e middlewares e implementação de serviços e repositório de employee.

--- a/IoC/IoC.csproj
+++ b/IoC/IoC.csproj
@@ -9,13 +9,18 @@
   <ItemGroup>
     <PackageReference Include="automapper.extensions.microsoft.dependencyinjection" Version="8.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.2" />
+    <PackageReference Include="Swashbuckle.aspnetcore.swagger" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.aspnetcore.swaggergen" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.aspnetcore.swaggerui" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
